# lagzero

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
lagzero/: __init__.py  main.py
lagzero/ai/: __init__.py  client.py  context.py  explainer.py  formatter.py  prompt.py  schema.py
lagzero/config/: __init__.py  settings.py
lagzero/correlation/: __init__.py  engine.py  rules.py  schema.py  scorer.py  store.py
lagzero/engine/: __init__.py  monitor.py
lagzero/events/: __init__.py  emitter.py  schema.py
lagzero/incidents/: __init__.py  cli.py  families.py  keys.py  lifecycle.py  manager.py  schema.py  service.py  store.py  timeline.py
lagzero/ingest/: __init__.py  cli.py  http.py
lagzero/kafka/: __init__.py  client.py  metadata.py  offsets.py
lagzero/lab/: __init__.py  cli.py  contracts.py  events.py  harness.py  state.py  webhook_capture.py
lagzero/monitoring/: __init__.py  anomaly.py  lag_calculator.py  lag_velocity.py  rate_calculator.py  time_lag.py
lagzero/persistence/: __init__.py  (+3 more)
scripts/: run_chaos_lab.sh  run_chaos_smoke.sh  run_local.sh
tests/: test_ai_context.py  test_ai_explainer.py  test_ai_formatter.py  test_anomaly.py  test_correlation.py  test_engine.py  test_event_emitter.py  test_incident_families.py  test_incident_keys.py  test_incident_lifecycle.py  test_incident_repository.py  test_incidents_cli.py  test_ingest_cli.py  test_ingest_http.py  test_lab_contracts.py  test_lab_events.py  test_lab_state.py  test_lab_webhook_capture.py  test_lag.py  test_rate.py  test_time_lag.py  test_webhook_sink.py
(+6 files in other folders)
