[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lagzero"
version = "0.1.0"
description = "AI-powered incident intelligence for Kafka consumer lag and backlog health."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "LagZero" }
]
keywords = ["kafka", "observability", "incident-response", "stream-processing", "monitoring"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
kafka = ["kafka-python>=2.0.2,<3.0.0"]
dev = ["pytest>=8.0.0,<9.0.0"]

[project.scripts]
lagzero = "lagzero.main:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lagzero*"]

